feat: allow multiple workers in the same bog (#2)

--- a/roles/horde_regen_worker/templates/ai_horde_worker.j2
+++ b/roles/horde_regen_worker/templates/ai_horde_worker.j2
@@ -1,11 +1,11 @@
 [Unit]
-Description=AI Horde regen Worker
+Description={{ worker_service_name }}
 After=network.target
 StartLimitIntervalSec=0
 
 [Service]
-WorkingDirectory=/home/db0/projects/horde-worker-regen
-ExecStart=sh -c '/home/db0/projects/horde-worker-regen/horde-bridge.sh'
+WorkingDirectory=/home/db0/projects/{{ worker_runtime_dir }}
+ExecStart=sh -c '/home/db0/projects/{{ worker_clone_dir }}/horde-bridge.sh'
 Restart=always
 RestartSec=15
 TimeoutStopSec=120
