feat: some undocumented features

--- a/roles/horde_regen_worker/templates/bridgeData.yaml.j2
+++ b/roles/horde_regen_worker/templates/bridgeData.yaml.j2
@@ -170,6 +170,12 @@ models_to_skip: {{ models_to_skip }}
 # and you very likely would get more kudos/hr if you just lower your max_power.
 suppress_speed_warnings: false # Currently unused in regen
 
+## Advanced features
+
+moderate_performance_mode: {{ moderate_performance_mode }}
+high_performance_mode: {{ high_performance_mode }}
+exit_on_unhandled_faults: {{ exit_on_unhandled_faults }}
+
 #########################
 ## Scribe (LLM Worker) ##
 #########################
